--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -129,7 +129,7 @@
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="images/a113.jpg" alt="Development">
+        <img src="app/assets/images/a113.jpg" alt="Development">
         <p><strong>Development & Deployment</strong></p>
         <p>With our IT experience gathered over time, We have developed a formula that gives us an edge in building, integrating and deploying basic or enterprise solutions in the shortest period of time.</p>
       </div>
